--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Latihan Git cam404</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ducimus, blanditiis odit vel cupiditate consequuntur quis laudantium illo atque voluptate perspiciatis dolore rem amet, quaerat sequi libero sint officiis dicta!</p>
 </body>
 
 </html>
